--- a/src/Ir.ApiTest.Entity/Ir.ApiTest.Entity.csproj
+++ b/src/Ir.ApiTest.Entity/Ir.ApiTest.Entity.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ir.ApiTest.Contracts\Ir.ApiTest.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
